tests/examples/bad/bad106.jl

int main()
{
   double a[33];
   double x;
   a[x]++;
   return 0;
}
